src/components/ChatApp/ChatApp.css
/* ... */
.dark .message-container::after{
  border-color: rgb(26, 66, 86) #1a4257 rgb(26, 66, 86) rgb(26, 66, 86);
  background: rgba(25, 147, 147, 0.2);
}

.thread-list:hover .thread-list-item:hover {
  background-color: #f8f8ff;
}

.thread-list:hover .thread-list-item {
  background-color: #fff;
}

.thread-list-item.active,
.thread-list:hover .thread-list-item.active,
.thread-list:hover .thread-list-item.active:hover {
  background-color: #e1f5fe;
  cursor: default;
}

.message-author-name,
.thread-name {
  margin: 0;
  font-size: 14px;
  padding: 0;
}

.container-date{
  background: #999999;
  color: #fff;
  position: relative;
  min-width: 80px;
  max-width: 80%;
  font-size: 17px;
  line-height: 22px;
  padding: 8px;
  padding-bottom: 4px;
  margin: 4px;
  border-radius: 8px;
  margin: 0 auto;
  text-align: center;
}

.dark .container-date{
  background: rgba(25, 147, 147, 0.2);
  color: #FFFFFF;
  position: relative;
  min-width: 80px;
  max-width: 80%;
  font-size: 17px;
  line-height: 22px;
  padding: 8px;
  padding-bottom: 4px;
  margin: 4px;
  border-radius: 8px;
  margin: 0 auto;
  text-align: center;
}

.message-container.SUSI{
  margin-right: auto;
  margin-left: 12px;
  margin-right: 5px;
  background: #fff;
}

.dark .message-container.SUSI{
  border-color:rgba(25, 147, 147, 0.2);
  background:rgba(25, 147, 147, 0.2);
  color: #FFFFFF;
}

.message-container.You{
  background: #e0e0e0;
  border: none;
}

.dark .message-container.You{
  background: rgba(25, 147, 147, 0.2);
  color: #FFFFFF;
}

.message-container.SUSI>h5,.message-container.SUSI>.message-text {
  padding-right: 16px;
}

.message-container.SUSI::after {
  transform: rotate(-315deg);
  left: 0;
  top: 16px;
  border-color: transparent transparent #fff #fff;
  background: #fff;
}

.dark .message-container.SUSI::after{
  border-color:#194b5e #194b5e rgb(25, 75, 94) rgb(25, 75, 94);
  background:rgba(25, 147, 147, 0.2);
}

.message-time, .thread-time {
  list-style-type: none;
  font-size: 12px;
  color: #90a4ae;
  padding: 0;
  text-align: right;
}
.response-time{
  margin-top: 4px;
}
.feedback{
  list-style-type: none;
  font-size: 12px;
  color: #90a4ae;
}
.dark .message-time, .thread-time{
  float: right;
  color: #7eaaaf;

}

.message-text, .thread-last-message {
  font-size: 14px;
  margin: 0;
  padding: 0;
  overflow-wrap: break-word;
}

.message-pane{
  margin: 0 auto;
  width: 100vw;
  max-width: 700px;
  overflow-x: hidden;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.compose {
  position: fixed;
  bottom: 0;
  margin: 0;
  border: none;
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-between;
  background: var(--compose);
  box-shadow: 0 -1px 4px 0 rgba(0,0,0,.12);
  z-index: 2;
  transform: translate3d(0140px,0);
  transition: transform .25s cubic-bezier(0,0,.3,1) .3s;
  pointer-events: auto;
  opacity: 1;
  width: 100vw;
  max-width: 700px;
  overflow-x: hidden;
  overflow-y: hidden;
  background: #f5f4f6;
  min-height: 75px;
}

.dark .compose{
  background: rgba(30, 87, 153, 0.02);
  color: #FFFFFF;
}

.scrollBottom{
  position: fixed;
  margin: 0;
  border: none;
  width: 100vw;
  max-width: 700px;
  bottom: 75px;
  overflow-x: hidden;
  overflow-y: hidden;
}

.message-composer {
  width: 100%;
  margin: 0 8px 0 0;
  padding: 14px 9px 8px 9px;
  font-size: 14px;
  border: none;
  background: 0 0;
  text-align: left;
  color: inherit;
  -webkit-appearance: none;
  border-radius: 0;
  display: block;
  text-align: left;
  color: inherit;
  outline: 0;
}

.dark .message-composer{
  width: 100%;
  margin: 0 auto;
  border-top: 1px solid rgba(240, 240, 240, 0.56);
}

.dark .message-composer textarea{
  color: #FFFFFF;
  background: rgba(0, 0, 0, 0.01);
}
.textBack {
  max-width: 89%;
  border-radius: 10px;
  display: block;
  position: relative;
  box-sizing: content-box;
  line-height: 20px;
  font-size: 15px;
  min-height: 20px;
  border: none;
  padding: 10px 12px;
  overflow-y: scroll;
  max-height: 59px;
  background-color: rgba(25,147,147,.2);
}
.textBack::-webkit-scrollbar {
  width: 6px ;
  height: 6px ;
}

.textBack::-webkit-scrollbar-thumb {
  background-color: rgba(0,0,0,0.2);
}
.textBack::-webkit-scrollbar-track {
  background: rgba(255,255,255,0.08);
}
textarea {
  border: none;
  width: 100%;
  outline: none;
  box-shadow: none;
  resize: none;
  font-size: 16px;
  font-family: "Product Sans", sans-serif;
  font-weight: 300;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  margin-top: 3px;
  background: #fff;
  color: #001d38;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  min-height: 80%;
  position: relative;
  top:0px;   background: transparent;

}
.scroll::-webkit-scrollbar {
  display: none;
 }
.scroll {
  overflow: -moz-scrollbars-none;
}

.voice-output{
  font-family: 'Lato', sans-serif;
  width: 500px;
  font-size: 100%;
  max-width: 400px;
  text-align: left;
  padding-right: 20px;
}

@media only screen and (min-width: 0px) and (max-width: 768px){
  textarea{
    width: 100%;
  }
  .textBack {
    width: 81%;
  }
  .voice-output{
    width: 100%;
    text-align: center;
    padding-right: 0px;
    margin: 0 auto;
  }
  .mic-container{
    margin:14px auto;
    text-align: center;
  }
  .voice-response{
    display: block;
    flex-wrap: row;
    position: relative;
    max-width: 300px;
    margin: 0 auto;
    text-align: center;
  }
}
@media only screen and (min-width: 768px) and (max-width: 1024px){
  textarea{
    width: 100%;
  }
}
.leaflet-container {
  height: 150px;
  width: 100%;
  margin: 0 auto;
}

.chatapp {
  margin: 0 auto;
  width: 100vw;
  max-width: 700px;
  overflow-x: hidden;
  overflow-y: hidden;
  background: #eceff1;
  padding: 0;
  margin: 0 auto;
  margin-top: 56px;
  box-shadow: 0 3px 6px rgba(0,0,0,.16), 0 3px 6px rgba(0,0,0,.23);
}

.map-marker-icon {
  background: url('../../images/map_marker_icon.png');
  background-size: contain;
  background-repeat: no-repeat;
  width: 25px;
  height: 25px;
}
/* ... */

